add some yarn & java config